[gd_scene load_steps=5 format=3 uid="uid://2paekpo61bww"]

[ext_resource type="Script" uid="uid://1hyg12v71a7q" path="res://addons/nodescript/ui/variable_editor.gd" id="1"]
[ext_resource type="Theme" uid="uid://bbkufuj4lk7no" path="res://addons/nodescript/ui/styling/node_script_styling.tres" id="2_ylv3b"]
[ext_resource type="PackedScene" uid="uid://orgselector" path="res://addons/nodescript/ui/org_selector.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://codefooter" path="res://addons/nodescript/ui/code_footer.tscn" id="4_codefooter"]

[node name="VariableEditor" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(0, 260)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ylv3b")
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ylv3b")

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ylv3b")

[node name="Panel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_ylv3b")
theme_type_variation = &"panel_header"

[node name="Header" type="HBoxContainer" parent="Margin/VBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
alignment = 1

[node name="HeaderIcon" type="TextureRect" parent="Margin/VBox/Panel/Header"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_ylv3b")
stretch_mode = 3

[node name="Title" type="Label" parent="Margin/VBox/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_ylv3b")
theme_type_variation = &"panel_header_text"
text = "Variable"
horizontal_alignment = 1

[node name="NameRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Margin/VBox/NameRow"]
layout_mode = 2
theme = ExtResource("2_ylv3b")
text = "Name"

[node name="VariableName" type="LineEdit" parent="Margin/VBox/NameRow"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
placeholder_text = "player_speed"

[node name="TypeButton" type="Button" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
text = "Type: Variant"

[node name="Flags" type="FlowContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 4

[node name="ExportCheck" type="CheckBox" parent="Margin/VBox/Flags"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
text = "@export"

[node name="OnreadyCheck" type="CheckBox" parent="Margin/VBox/Flags"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
text = "@onready"

[node name="ConstCheck" type="CheckBox" parent="Margin/VBox/Flags"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
text = "const"

[node name="ModeGroup" type="ButtonGroup" parent="Margin/VBox/Flags"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
resource_local_to_scene = true
script = null

[node name="ExportGroupLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
text = "Export Group"
autowrap_mode = 1

[node name="ExportGroup" type="LineEdit" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
placeholder_text = "Group"

[node name="ValueLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme = ExtResource("2_ylv3b")
text = "Default Value"

[node name="ValueField" type="LineEdit" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_ylv3b")
placeholder_text = "0"

[node name="OrgSelector" parent="Margin/VBox" instance=ExtResource("3")]
layout_mode = 2

[node name="Spacer" type="Control" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_ylv3b")

[node name="Signature" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_ylv3b")
theme_type_variation = &"panel_header"

[node name="SignatureHeader" type="HBoxContainer" parent="Margin/VBox/Signature"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ylv3b")
theme_override_constants/separation = 6
alignment = 1

[node name="SignatureIcon" type="TextureRect" parent="Margin/VBox/Signature/SignatureHeader"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_ylv3b")
stretch_mode = 3

[node name="SignatureTitle" type="Label" parent="Margin/VBox/Signature/SignatureHeader"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_ylv3b")
theme_type_variation = &"panel_header_text"
text = "Code Output"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" parent="Margin/VBox" instance=ExtResource("4_codefooter")]
layout_mode = 2
theme = ExtResource("2_ylv3b")
